feat: add conversions and funnels
